--- a/Trabalho_03/css/calculadora.css
+++ b/Trabalho_03/css/calculadora.css
@@ -1,3 +1,13 @@
+
+.bot{
+  transition: all 0.3s ease-out;
+}
+.bot:hover, .equal:hover{
+  color: white;
+  background-color: rgb(20,20,20);
+transform: rotate(360deg)
+}
+
 body{
     background-color: aliceblue;
 }
@@ -15,7 +25,7 @@ header{
     background-color: lightskyblue;
     
     line-height: 60px;
-    height: 380px;
+    height: 360px;
     width: 300px;
     text-align: center;
     line-height: 0px;
@@ -42,17 +52,60 @@ header{
     justify-content: space-around;
     justify-content: space-between;
     justify-content: center;
-    
-    grid-template-columns: auto auto auto auto;
-    grid-template-rows: auto auto auto auto auto auto;
-
-}
-
-
-.button{
-  grid-column: auto;
 }
 /*
-    grid-column: auto auto auto auto;
-    grid-row: auto auto auto auto;
+th{
+    line-height: 3.5;
+}
 */
+.panel{
+
+    width: 255px;
+    height: 40px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    margin-top: 15px;
+
+}
+.bot{
+    width: 50px;
+    height: 50px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-family: cursive;
+    font-size: 25px;
+    margin-top: 3px;
+
+}
+.equal{
+    width: 250px;
+    height: 40px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    font-family: cursive;
+    font-size: 25px;
+    margin-top: 3px;
+
+}
+#historico{
+    background-color: azure;
+    height: 360px;
+    width: 300px;
+    text-align: center;
+    margin: auto;
+    margin-top: 5px;
+
+    border-style: solid;
+    border-color: black;
+    box-sizing: border-box;
+    position: relative;
+    overflow-y: scroll;
+    padding: 20px 20px 20px 20px;
+    text-align: right;
+}
